<resources>
    <string name="app_name">FitnessTracker</string>
    <string name="login_page">Login Page</string>
    <string name="register_page">Register Page</string>
    <string name="email">Email:</string>
    <string name="dob">Date Of Birth:</string>
    <string name="gender">Gender:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="height">Height:</string>
    <string name="HeightCM">Height (cm)</string>
    <string name="WeightLBS">Weight (lbs)</string>
    <string name="WeightKG">Weight (kg)</string>
    <string name="HeightFT">Height (ft)</string>
    <string name="activity_level">Activity Level:</string>
    <string name="weight">Weight:</string>
    <string name="measurements">Measurements System</string>
    <string name="metric">Metric</string>
    <string name="imperial">Imperial</string>


    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="blank"> </string>
    <string name="activityLevel" />
    <string name="measurementSystem" />
    <string name="kg">kg</string>

    <string name="weekly_goal">Weekly Weight goal?</string>
    <string name="target_weight">Target Weight goal?</string>


    <string-array name="array_weekly_goal_kg">
        <item>Please Select:</item>
        <item>Lose 1kg per week</item>
        <item>Lose 0.5kg per week</item>
        <item>Maintain current weight</item>
        <item>Gain 0.5kg per week</item>
        <item>Gain 1kg per week</item>
    </string-array>

    <string-array name="array_weekly_goal_lb">
        <item>Please Select:</item>
        <item>Lose 1lb per week</item>
        <item>Lose 0.5lb per week</item>
        <item>Maintain current weight</item>
        <item>Gain 0.5lb per week</item>
        <item>Gain 1lb per week</item>
    </string-array>

    <string-array name="array_weekly_goal_measurement">
        <item>kg each week</item>
        <item>lb each week</item>
    </string-array>

    <string-array name="arrayOfMeasurements">
        <item>Please Select:</item>
        <item>Metric</item>
        <item>Imperial</item>
    </string-array>

    <string-array name="array_activity_levels">
        <item>Please Select:</item>
        <item>Little to no exercise</item>
        <item>Light exercise (1–3 days per week)</item>
        <item>Moderate exercise (3–5 days per week)</item>
        <item>Heavy exercise (6–7 days per week)</item>
        <item>Very heavy exercise (twice per day, extra heavy workouts)</item>
    </string-array>


    <string-array name="array_months">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>
    <string name="title_activity_home_page">Home_Page</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_goal">Goal</string>
    <string name="diet_tracker">Diet</string>
    <string name="menu_food">Food</string>
    <string name="name">Full Name:</string>
    <string name="password">Password:</string>
    <string name="get_started">Get Started</string>
    <string name="log_out">Log Out</string>


</resources>