<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/icons8_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/icons8_profile_24"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_goal"
            android:icon="@drawable/icons8_goal_30"
            android:title="@string/menu_goal" />
        <item
            android:id="@+id/nav_diet"
            android:icon="@drawable/icons8_diet_68"
            android:title="@string/diet_tracker" />
        <item
            android:id="@+id/nav_food"
            android:icon="@drawable/icons8_food_bar_24"
            android:title="@string/menu_food" />
    </group>
</menu>