<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:fitsSystemWindows="true"
    tools:context=".registerScreen"
    tools:ignore="SpeakableTextPresentCheck">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="24dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="25dp"
            android:src="@drawable/ic_launcher_background" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Please enter the following details"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:textSize="16sp"
            android:textAllCaps="true"
            android:textStyle="bold|italic">

        </TextView>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- Email -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email">

                </TextView>

                <EditText
                    android:id="@+id/editTextTextEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textEmailAddress" />
            </TableRow>

            <!-- Date Of Birth -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="12dp" >

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dob"/>


                        <Button
                            android:id="@+id/dobPickerButton"
                            android:layout_width="250dp"
                            android:layout_height="wrap_content"
                            android:text="JAN 01 2023"
                            android:textSize="18sp"
                            android:textColor="@android:color/black"
                            style="?android:spinnerStyle"
                            android:onClick="openDOBPicker"
                            app:layout_constraintRight_toRightOf="@string/dob">
                        </Button>


            </TableRow>


            <!--Gender-->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="12dp" >

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gender"
                    android:layout_marginTop="12dp" />

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >


                        <RadioGroup
                            android:id="@+id/radioGroupGender"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <RadioButton
                                android:id="@+id/radioButtonGenderMale"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:checked="true"
                                android:text="@string/male"
                                android:layout_marginRight="5dp"/>

                            <RadioButton
                                android:id="@+id/radioButtonGenderFemale"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/female" />
                        </RadioGroup>
                    </TableRow>

                </TableLayout>

            </TableRow>

            <!--Measurement System-->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="12dp">

                <TextView
                    android:id="@string/measurementSystem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/measurements"
                    android:layout_marginTop="0dp" />

                <Spinner
                    android:id="@+id/spinnerMeasurementSystem"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/arrayOfMeasurements"
                    android:layout_marginLeft="8dp"/>

            </TableRow>

            <!--Height-->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="12dp">

                <TextView
                    android:id="@string/height"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Height"
                    android:layout_marginTop="16dp"/>

                <TableLayout>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <EditText
                            android:id="@+id/editTextHeightFeet"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ems="3"
                            android:inputType="number" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="ft" />

                        <EditText
                            android:id="@+id/editTextHeightInches"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ems="3"
                            android:inputType="number" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="in" />
                    </TableRow>

                </TableLayout>

            </TableRow>

            <!--Weight-->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@string/weight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Weight"
                    android:layout_marginTop="10dp"/>

                <TableLayout>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <EditText
                            android:id="@+id/editTextWeight"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ems="3"
                            android:inputType="number" />

                        <TextView
                            android:id="@+id/textViewKG"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Kg">
                        </TextView>

                    </TableRow>
                </TableLayout>
            </TableRow>

            <!--Activity Level-->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="18dp">

                <TextView
                    android:id="@string/activityLevel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Activity Level"
                    android:layout_marginTop="2dp"/>

                <TableLayout>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <Spinner
                            android:id="@+id/spinnerActivityLevel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:entries="@array/array_activity_levels" />

                    </TableRow>
                </TableLayout>
            </TableRow>

            <!--Submit Button-->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="18dp"
                android:gravity="center">

                <Button
                    android:id="@+id/buttonSignup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Sign Up"
                    android:layout_marginTop="12dp" />

            </TableRow>

        </TableLayout>


    </LinearLayout>

</ScrollView>